<resources>
    <string name="app_name">Foody</string>
    <string name="delicious">Delicious</string>
    <string name="for_you">food for you</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="fb">Facebook</string>
    <string name="google">Google</string>
    <string name="forgotpassword">Forgot password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>